; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/libevent/test/extr_regress.gen.c_kill_action_assign.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/libevent/test/extr_regress.gen.c_kill_action_assign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kill = type { i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kill_action_assign(%struct.kill* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.kill*, align 8
  %5 = alloca i8*, align 8
  store %struct.kill* %0, %struct.kill** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load %struct.kill*, %struct.kill** %4, align 8
  %7 = getelementptr inbounds %struct.kill, %struct.kill* %6, i32 0, i32 1
  %8 = load i32*, i32** %7, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %15

10:                                               ; preds = %2
  %11 = load %struct.kill*, %struct.kill** %4, align 8
  %12 = getelementptr inbounds %struct.kill, %struct.kill* %11, i32 0, i32 1
  %13 = load i32*, i32** %12, align 8
  %14 = call i32 @free(i32* %13)
  br label %15

15:                                               ; preds = %10, %2
  %16 = load i8*, i8** %5, align 8
  %17 = call i32* @strdup(i8* %16)
  %18 = load %struct.kill*, %struct.kill** %4, align 8
  %19 = getelementptr inbounds %struct.kill, %struct.kill* %18, i32 0, i32 1
  store i32* %17, i32** %19, align 8
  %20 = icmp eq i32* %17, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %15
  store i32 -1, i32* %3, align 4
  br label %25

22:                                               ; preds = %15
  %23 = load %struct.kill*, %struct.kill** %4, align 8
  %24 = getelementptr inbounds %struct.kill, %struct.kill* %23, i32 0, i32 0
  store i32 1, i32* %24, align 8
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %22, %21
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @free(i32*) #1

declare dso_local i32* @strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
